<resources>
    <string name="app_name">Travel Guide</string>
    <string name="header_text">Coxs Bazar Travel Guide</string>
    <string name="title">Coxs Bazar</string>
    <string name="enjoy">Enjoy your stay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_web">WEB SITE</string>
    <string name="coupons">Coupons</string>
    <string name="game">QR Reader</string>
    <string name="map">Map</string>
    <string name="event">Events</string>
    <string name="login">Login</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- login/register -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Travel Guide Almeria</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not  Registered? Sign up</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot  password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <!-- QR Reader -->
    <string name="qr_txt_information">This QR code gives you access to the coupon area.</string>
    <string name="qr_txt_code">Please focus on QR code</string>
    <string name="code">CODE :</string>
    <string name="events_img">events_img</string>

</resources>
